# exiftool2csv

./: .pre-commit-config.yaml  LICENSE  README.md  exiftool2csv.py  pyproject.toml
